samples/_failures_safe/1761657599_a760ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5db8070.c: In function ‘main’:
./samples/SAFE/__tmp_e5db8070.c:157:43: error: missing terminating " character
  157 |                     print_matrix(&result, "A+B
      |                                           ^~~~
./samples/SAFE/__tmp_e5db8070.c:157:21: error: expected expression at end of input
  157 |                     print_matrix(&result, "A+B
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_e5db8070.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5db8070.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5db8070.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5db8070.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e5db8070.c:157:21: error: expected declaration or statement at end of input
